--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,11 +1,14 @@
 .container {
-  display: grid;
-  max-width: 1280px;
+  display: flex;
+  align-items: center;
+  max-width: 1380px;
+  height: 100%;
   margin: 0 auto;
-  grid-template-areas:
-    "nav cont";
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 200px 5fr;
-  grid-gap: 10px;
   padding: 0 40px;
+  box-sizing: border-box;
+}
+
+.main{
+  text-align: center;
+  width: 100%;
 }
