--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,6 +1,4 @@
 body {
-  display: flex;
-  align-items: center;
   height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,6 +11,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root{
+  height: 100%;
 }
 
 
