--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -17,4 +17,17 @@ code {
   height: 100%;
 }
 
+.btn{
+  display: inline;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 12px 25px;
+  border-radius: 10px;
+  background: #7eda95;
+  color: black;
+  cursor: pointer;
+
+  transition: .2s background linear, .1s color linear;
+}
+
 
